# bonfire-app

./: .build  .build.epub  .build.markdown  .credo.exs  .dockerignore  .env  .envrc  .erlang.cookie  .formatter.exs  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .iex.exs  .is_umbrella.exs  .recode.exs  .tool-versions  .tool-versions.env  .yarnrc  404.html  AGENTS.md  AbsintheClient.Helpers.html  AbsintheClient.html  AbsintheClient.md  ActivityPub.Actor.html  ActivityPub.C2S.html  ActivityPub.Config.Error.html  ActivityPub.Config.html  ActivityPub.Federator.APPublisher.html  ActivityPub.Federator.Adapter.html  ActivityPub.Federator.Fetcher.html  ActivityPub.Federator.HTTP.Connection.html  ActivityPub.Federator.HTTP.RateLimit.html  ActivityPub.Federator.HTTP.RateLimitSnooze.html  ActivityPub.Federator.HTTP.RequestBuilder.html  ActivityPub.Federator.HTTP.RetryAfter.html  ActivityPub.Federator.HTTP.Tesla.html  ActivityPub.Federator.HTTP.html  ActivityPub.Federator.Publisher.html  ActivityPub.Federator.Transformer.html  (+1247 more)
.claude/: CLAUDE.md  settings.local.json
.clinerules/: conventions.md  live_select.llms.txt.md  phoenix.liveview.js.md  tests.md
.github/: dependabot.yml
.nova/: Configuration.json
.sobelow/: sobelow-vsn-check
.tx/: config
.zed/: settings.json
assets/: .postcssrc  esbuild_watch.js  install.sh  install_app.sh  (+7 more)
src-tauri/: Cargo.toml  README.md  build.rs  icons  tauri.conf.json  tauri.e2e.conf.json  tauri.ios.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  e2ee-chat.json  notification.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  deep_link.rs  lib.rs  main.rs  notifications.rs  state.rs  tray.rs
src-tauri/src/layout/: chrome_bar.rs  mobile.rs  mod.rs  multi_window.rs  split_pane.rs  tab_based.rs
(+3099 files in other folders)
