[package]
name = "Bonfire"
version = "0.1.0"
description = "Bonfire"
authors = ["Bonfire Networks"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset", "tray-icon", "unstable"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
mime_guess = "2"
tauri-plugin-openmls = { git = "https://github.com/bonfire-networks/tauri-plugin-openmls.git" } #path = "../forks/tauri-plugin-openmls" }
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["stream"] }
reqwest-eventsource = "0.6"
tokio = { version = "1", features = ["sync", "macros"] }
futures-util = "0.3"
tauri-plugin-deep-link = "2"
url = "2"

